gtlssh: Fix (sort of) memory leak
Free the service before return so valgrind doesn't report it as a leak.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -471,7 +471,7 @@ restored to those values after opening the pty.  The group list is
 also set to the groups the effective userid is in.  Note that nothing
 is done if the effective and real userids are the same.
 
-The connecting gensio support the GENSIO_CONTROL ENVIRONMENT control
+The connecting gensio support the GENSIO_CONTROL_ENVIRONMENT control
 to allow the environment to be set for the new process.
 
 An accepting gensio immediately does a connection when started and
@@ -810,7 +810,7 @@ opening the pty.  The group list is also set to the groups the
 effective userid is in.  Note that nothing is done if the effective
 and real userids are the same.
 
-The pty gensio support the GENSIO_CONTROL ENVIRONMENT control to allow
+The pty gensio support the GENSIO_CONTROL_ENVIRONMENT control to allow
 the environment to be set for the new process.
 .SS "Remote Address String"
 The remote address string the program and arguments run on the pty.
