gtlssh: Add a mux to the gensio stack
This lets out of band data be sent, and lets multiple channels
be used over the same connection.

Add a way to disable the mux, too.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -45,6 +45,10 @@ Disable SCTP support.
 .TP
 .I \-\-notcp
 Disable TCP support
+.TP
+.I \-\-nomux
+Don't use a mux gensio.  This may cause issues with gtlsshd, but is
+useful in some cases for talking with ser2net with no mux support.
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
 .TP
