--- a/man/gensio.5
+++ b/man/gensio.5
@@ -279,7 +279,7 @@ with ipv4 or ipv6, which will force the connections to those
 protocols.  Specifying ipv6n4 will create a socket that is IPv6 but
 will accept IPv4 connections.
 
-TCP support out of band (oob) data, which is data that will be
+TCP supports out of band (oob) data, which is data that will be
 delivered out of order as soon as possible.  This comes in a normal
 read, but with "oob" in the auxdata.  You can send oob data by adding
 "oob" to the write auxdata, but oob writes are limited to 1 byte and
