mux: Modify new channel to ignore return values
Returning an error from new channel results in a lot of extra complexity
and strange side effects.  Instead, just complete the channel and
deliver it.  The user can close the channel from the new channel
callback now.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -866,7 +866,8 @@ and then opens the new channel, the other end will get a
 .I GENSIO\_EVENT\_NEW\_CHANNEL
 event as described in the
 .B Streams and Channels
-section.  You can call it using any mux channel.
+section.  You can call it using any mux channel.  The first element in
+the auxdata is the service.
 
 You can modify the service value after you allocate the channel but
 before you open it.
